# eliza

./: Cargo.toml  README.md
rules/: therapist.json
src/: discord.rs  eliza.rs  main.rs  pattern.rs  rules.rs
