[package]
name = "eliza"
version = "0.1.0"
authors = ["Nicolas Bourras <vivescere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.7.3"
serenity = "0.8.0"
dotenv = "0.15.0"
